# mongo-vue-task

./: README.md
backend/: pyproject.toml
backend/app/: __init__.py  models.py  routes.py
frontend/: index.html  package-lock.json  package.json
frontend/src/components/: VideoForm.vue
frontend/src/layouts/default/: AppBar.vue
frontend/src/lib/: axios.ts
frontend/src/router/: index.ts
frontend/src/views/: Home.vue  Themes.vue
