[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mmpdrosa <matheusmp2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-pymongo = "^2.3.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
